<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_text_presente"
            style="@style/tableHeaderText"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:text="@string/presente_do_indicativo_present_tense" />

        <EditText
            android:id="@+id/edit_presente_1"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_presente_2"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_presente_3"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_presente_4"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_presente_5"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/edit_text_p_p_s"
            style="@style/tableHeaderText"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:text="@string/pret_rito_perfeito_simples_past_tense" />

        <EditText
            android:id="@+id/edit_p_p_s_1"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_p_s_2"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_p_s_3"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_p_s_4"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_p_s_5"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/edit_text_p_i_s"
            style="@style/tableHeaderText"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:text="@string/pret_rito_imperfeito_simples_past_tense" />

        <EditText
            android:id="@+id/edit_p_i_s_1"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_i_s_2"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_i_s_3"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_i_s_4"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_i_s_5"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/edit_text_futuro"
            style="@style/tableHeaderText"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:text="@string/futuro_imperfeito_future_tense" />

        <EditText
            android:id="@+id/edit_futuro_1"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_futuro_2"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_futuro_3"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_futuro_4"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_futuro_5"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/edit_text_p_m_q_p_c"
            style="@style/tableHeaderText"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:text="@string/preterito_mais_que_perfeito_composto" />

        <EditText
            android:id="@+id/edit_p_m_q_p_c_1"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_m_q_p_c_2"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_m_q_p_c_3"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_m_q_p_c_4"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_m_q_p_c_5"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            android:id="@+id/edit_text_p_p_c"
            style="@style/tableHeaderText"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:text="@string/preterito_perfeito_composto" />

        <EditText
            android:id="@+id/edit_p_p_c_1"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_p_c_2"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_p_c_3"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_p_c_4"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edit_p_p_c_5"
            style="@style/tableText"
            android:layout_width="150dp"
            android:layout_height="@dimen/list_height"
            android:layout_marginBottom="133dp"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>
</ScrollView>